# nanoDiffusion

./: .gitignore  README.md  pyproject.toml
minimal_version/: forward_diffusion.py  model.py  sample.py  train.py
scaled_version/: dit.py  sample.py  scheduler.py
