[project]
name = "nanodiffusion"
version = "0.1.0"
description = ""
authors = [
    {name = "Sarath S Menon",email = "sarathmenon.downey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
